Fix: Text in Play button was not completely vertically aligned

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -404,6 +404,7 @@ html {
 
 .btnPlay>.detailButton-content::after {
     padding-left: .25em;
+    margin-top: .1em;
     content: "Play";
 }
 
